tests/typing/good/testfile-error-1.hs
x =
  1 + error "a"
main =
  return ()
