tests/typing/bad/testfile-arith-1.hs
x = 1 + 'a'
main = return ()
